--- a/css/style.css
+++ b/css/style.css
@@ -330,6 +330,7 @@ Header
 
 .header .nav-inner ul li{
     text-align: center;
+    list-style-type: none;
 }
 
 .header .nav-inner ul li a{
@@ -346,6 +347,7 @@ Header
 .header .nav-inner ul li a:hover{
     color: var(--main-color);
 }
+
 
 /* ------------------------------------
 Home section
@@ -631,7 +633,7 @@ Home section
     height: 40px;
     width: 40px;
     background-color: var(--white-alpha-25);
-    border: 1px; solid var(--white-alpha-40);
+    border: 1px solid var(--white-alpha-40);
     color: var(--main-color);
     border-radius: 50%;
     margin: 6px 10px 0 0;
