--- a/css/style.css
+++ b/css/style.css
@@ -578,6 +578,7 @@ Home section
 }
 
 .contact-form .input-group{
+    background-color: #3a09ff;
     width: 100%;
     margin-bottom: 30px;
 }
@@ -616,6 +617,7 @@ Home section
 }
 
 .contact-info-item{
+    background-color: red;
     margin: 0 0 30px;
     padding: 0 0 0 120px;
 }
